--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Recent college grad, aspiring data scientist with a passion for using innovative methods to leverage actionable insights from data</p>
